--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,14 @@
 plugins {
 
 }
+
+allprojects {
+    apply plugin: "idea"
+
+    group = 'com.github.gregwhitaker'
+    version = '0.1.0'
+
+    repositories {
+        mavenCentral()
+    }
+}
