--- a/project-a/build.gradle
+++ b/project-a/build.gradle
@@ -1,16 +1,13 @@
 plugins {
-    id 'java'
+    id "java"
 }
-
-group 'org.example'
-version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
 
-repositories {
-    mavenCentral()
-}
-
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation platform(project(':platform'))
+
+    implementation 'org.slf4j:slf4j-api'
+
+    testImplementation 'junit:junit'
 }
